# av-foundation

./: Cargo.toml  README.md  build.rs
examples/: basic.rs  delegate.rs
src/: capture_connection.rs  capture_device.rs  capture_device_input.rs  capture_video_data_output.rs  delegate.rs  error.rs  ffi.rs  lib.rs  main.rs  media_type.rs
src-build/: capture.h  capture.m
src/capture/: connection.rs  device.rs  mod.rs  session.rs
src/capture/delegate/: mod.rs
src/capture/input/: device.rs  mod.rs
src/capture/output/: mod.rs  video_data.rs
src/capture_input/: mod.rs  port.rs
src/capture_output/: mod.rs
src/capture_session/: mod.rs
src/ffi/: mod.rs
